--- a/ui/html/home.page.tmpl
+++ b/ui/html/home.page.tmpl
@@ -1,1 +1,6 @@
-
+{{template "base" .}}
+{{define "title"}}Home{{end}}
+{{define "body"}}
+<h2>Latest Snippets</h2>
+<p>There's nothing to see here yet!</p>
+{{end}}
